--- a/app/src/main/res/layout/activity_user_infor_ticket_history.xml
+++ b/app/src/main/res/layout/activity_user_infor_ticket_history.xml
@@ -79,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <LinearLayout
-        android:layout_width="205dp"
+        android:layout_width="250dp"
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
@@ -89,10 +89,10 @@
 
         <Button
             android:id="@+id/button6"
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/purple_500"
+            android:background="@drawable/corner_button"
             android:text="Previous"
             android:textColor="@color/white" />
 
@@ -103,10 +103,10 @@
 
         <Button
             android:id="@+id/button7"
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/purple_500"
+            android:background="@drawable/corner_button"
             android:text="Next"
             android:textColor="@color/white" />
     </LinearLayout>
