--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="attribute_gray">#20706060</color>
     <color name="blank">#00FFFFFF</color>
     <color name="light_gray">#F0F0F0</color>
+    <color name="button_color">#7749F8</color>
 </resources>
