update: home + bus

--- a/app/src/main/res/layout/activity_ticket_item.xml
+++ b/app/src/main/res/layout/activity_ticket_item.xml
@@ -29,7 +29,7 @@ android:layout_width="match_parent"
             android:layout_marginStart="5dp"
             >
             <TextView
-                android:id="@+id/ticketName"
+                android:id="@+id/busOperatorName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Ninh bình"
@@ -38,7 +38,7 @@ android:layout_width="match_parent"
                 android:textStyle="bold"
                 />
             <TextView
-                android:id="@+id/ticketPrice"
+                android:id="@+id/busPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Price: 100.000đ"
@@ -46,7 +46,7 @@ android:layout_width="match_parent"
                 android:textColor="#000000"
                 />
             <TextView
-                android:id="@+id/ticketTime"
+                android:id="@+id/busStartTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Time: 1h"
@@ -55,7 +55,7 @@ android:layout_width="match_parent"
                 />
 <!--            location -->
             <TextView
-                android:id="@+id/ticketLocation"
+                android:id="@+id/busDeparture"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Location: Ninh bình - 1h30"
@@ -63,7 +63,7 @@ android:layout_width="match_parent"
                 android:textColor="#000000"
                 />
             <TextView
-                android:id="@+id/ticketDestination"
+                android:id="@+id/busDestination"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Destination: HCM - 2h30"
