--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -68,44 +68,41 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/textview_border"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/blogList">
 
-                <GridLayout
+                <LinearLayout
                     android:id="@+id/gridLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:columnCount="2">
+                    android:orientation="horizontal"
+                    android:divider="@drawable/empty_tall_divider"
+                    >
 
-
-                    <AutoCompleteTextView
-                        android:id="@+id/autoCompleteLocationFrom"
+                    <Spinner
+                        android:id="@+id/spinnerDeparture"
                         android:layout_height="wrap_content"
-                        android:layout_columnWeight="1"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
                         android:layout_below="@+id/textView"
-                        android:drawableStart="@drawable/ic_baseline_location_on_24"
-                        android:hint="Destination"
-                        android:layout_gravity="fill"
+                        android:hint="Departure"
                         android:layout_marginTop="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:completionThreshold="3"
+                        android:background="@drawable/textview_border"
                         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
-                    <AutoCompleteTextView
-                        android:id="@+id/autoCompleteDestinationTo"
+                    <Spinner
+                        android:id="@+id/spinnerDestination"
                         android:layout_height="wrap_content"
-                        android:layout_columnWeight="1"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         android:layout_below="@+id/textView"
-                        android:drawableStart="@drawable/ic_baseline_location_on_24"
                         android:hint="Destination"
-                        android:layout_gravity="fill"
-                        android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
-                        android:completionThreshold="3"
+                        android:background="@drawable/textview_border"
                         app:layout_constraintTop_toBottomOf="@+id/textView" />
-                </GridLayout>
+                </LinearLayout>
 
                 <EditText
                     android:id="@+id/datePicker"
@@ -160,6 +157,22 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/searchText" />
+
+            <Button
+                android:id="@+id/loadMore"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/searchResult"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:text="Load More"
+                android:textColor="#fff"
+                android:textSize="15sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
