--- a/app/src/main/res/layout/activity_bus_detail.xml
+++ b/app/src/main/res/layout/activity_bus_detail.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/closeBtn"
         app:tabGravity="fill"
         app:tabIndicatorColor="#7749F8"
         app:tabIndicatorHeight="5dp"
@@ -44,5 +44,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
 
-
+    <Button
+        android:id="@+id/closeBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content"
+        android:text="CLOSE"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
