--- a/app/src/main/res/layout/activity_ticket_item.xml
+++ b/app/src/main/res/layout/activity_ticket_item.xml
@@ -17,11 +17,12 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="10dp"
         >
-        <View
+        <ImageView
+            android:id="@+id/busImage"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginTop="5dp"
-            ></View>
+            ></ImageView>
         <LinearLayout
 android:layout_width="match_parent"
             android:layout_height="wrap_content"
