--- a/app/src/main/res/layout/fragment_bus_information.xml
+++ b/app/src/main/res/layout/fragment_bus_information.xml
@@ -22,23 +22,25 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/busInfoRV"
+            android:layout_width="match_parent"
+            android:layout_height="487dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginHorizontal="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/busInfoTitle" />
         <ImageView
+            app:layout_constraintTop_toBottomOf="@+id/busInfoRV"
             android:id="@+id/imageView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:src="@tools:sample/avatars" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/busInfoRV"
-            android:layout_width="412dp"
-            android:layout_height="487dp"
-            android:layout_marginTop="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/busInfoTitle" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
