--- a/app/src/main/res/layout/fragment_bus_information_column.xml
+++ b/app/src/main/res/layout/fragment_bus_information_column.xml
@@ -4,6 +4,8 @@
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/columnText"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
