--- a/app/src/main/res/layout/admin_bus_list_item.xml
+++ b/app/src/main/res/layout/admin_bus_list_item.xml
@@ -3,52 +3,51 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="300dp">
+    android:layout_height="350dp">
 
     <ImageView
         android:id="@+id/adminBusImgV"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="4dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.106"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/adminBusTV"
+        android:id="@+id/adminBusBOItemTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:text="Bus Operator"
-        android:textStyle="bold"
-        android:textSize="24sp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Phương Trang"
+        android:textSize="32sp"
         app:layout_constraintStart_toEndOf="@+id/adminBusImgV"
-        app:layout_constraintTop_toTopOf="@+id/adminBusImgV" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/adminBusStartPointTV"
+        android:id="@+id/adminBusStartPointTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Start point"
+        android:layout_marginTop="16dp"
+        android:text="From"
         android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@+id/adminBusTV"
-        app:layout_constraintTop_toBottomOf="@+id/adminBusTV" />
+        app:layout_constraintStart_toStartOf="@+id/adminBusBOItemTitle"
+        app:layout_constraintTop_toBottomOf="@+id/adminBusBOItemTitle" />
 
     <TextView
         android:id="@+id/adminBusEndPointTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="End point"
+        android:text="To"
         android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@+id/adminBusStartPointTV"
-        app:layout_constraintTop_toBottomOf="@+id/adminBusStartPointTV" />
+        app:layout_constraintStart_toStartOf="@+id/adminBusBOItemTitle"
+        app:layout_constraintTop_toBottomOf="@+id/adminBusStartPointTitle" />
 
     <TextView
-        android:id="@+id/adminBusTicketStartTimeTtile"
+        android:id="@+id/adminBusStartTimeTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -58,78 +57,94 @@
         app:layout_constraintTop_toBottomOf="@+id/adminBusEndPointTitle" />
 
     <TextView
-        android:id="@+id/adminBusTicketEndTimeTitle"
+        android:id="@+id/adminBusEndTimeTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="End time"
+        android:text="End Time"
         android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@+id/adminBusTicketStartTimeTtile"
-        app:layout_constraintTop_toBottomOf="@+id/adminBusTicketStartTimeTtile" />
+        app:layout_constraintStart_toStartOf="@+id/adminBusStartTimeTitle"
+        app:layout_constraintTop_toBottomOf="@+id/adminBusStartTimeTitle" />
 
     <TextView
-        android:id="@+id/adminBusTicketPriceTitle"
+        android:id="@+id/adminBusTypeTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Type"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="@+id/adminBusEndTimeTitle"
+        app:layout_constraintTop_toBottomOf="@+id/adminBusEndTimeTitle" />
+
+    <TextView
+        android:id="@+id/adminBusPriceTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Price"
         android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@+id/adminBusTV"
-        app:layout_constraintTop_toBottomOf="@+id/adminBusTicketEndTimeTitle" />
-
-    <Button
-        android:id="@+id/adminBusDeleteBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.7"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/adminBusTypeTitle"
+        app:layout_constraintTop_toBottomOf="@+id/adminBusTypeTitle" />
 
     <TextView
         android:id="@+id/adminBusStartPointVal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="TP HCM"
-        app:layout_constraintStart_toEndOf="@+id/adminBusStartPointTV"
-        app:layout_constraintTop_toTopOf="@+id/adminBusStartPointTV" />
+        android:layout_marginEnd="24dp"
+        android:text="District 7, HCM"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/adminBusStartPointTitle" />
 
     <TextView
-        android:id="@+id/adminBusTicketEndPointVal"
+        android:id="@+id/adminBusEndPointVal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Ha Noi"
-        app:layout_constraintStart_toEndOf="@+id/adminBusEndPointTitle"
+        android:text="District 12 HCM"
+        app:layout_constraintEnd_toEndOf="@+id/adminBusStartPointVal"
         app:layout_constraintTop_toTopOf="@+id/adminBusEndPointTitle" />
 
     <TextView
-        android:id="@+id/adminBusTicketStartTimeVal"
+        android:id="@+id/adminBusStartTimeVal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="15:00 13/04/2022"
-        app:layout_constraintStart_toEndOf="@+id/adminBusTicketStartTimeTtile"
-        app:layout_constraintTop_toTopOf="@+id/adminBusTicketStartTimeTtile" />
+        android:layout_marginTop="36dp"
+        android:text="15:00 04/04/2023"
+        app:layout_constraintEnd_toEndOf="@+id/adminBusStartPointVal"
+        app:layout_constraintTop_toTopOf="@+id/adminBusEndPointTitle" />
 
     <TextView
-        android:id="@+id/adminBusTicketEndTimeVal"
+        android:id="@+id/adminBusEndTimeVal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="12:00 14/04/2022"
-        app:layout_constraintStart_toEndOf="@+id/adminBusTicketEndTimeTitle"
-        app:layout_constraintTop_toTopOf="@+id/adminBusTicketEndTimeTitle" />
+        android:text="15:00 04/04/2023"
+        app:layout_constraintEnd_toEndOf="@+id/adminBusStartTimeVal"
+        app:layout_constraintTop_toTopOf="@+id/adminBusEndTimeTitle" />
+
+    <TextView
+        android:id="@+id/adminBusTypeVal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Limousine"
+        app:layout_constraintEnd_toEndOf="@+id/adminBusEndTimeVal"
+        app:layout_constraintTop_toTopOf="@+id/adminBusTypeTitle" />
 
     <TextView
         android:id="@+id/adminBusPriceVal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="23000"
-        app:layout_constraintStart_toEndOf="@+id/adminBusTicketPriceTitle"
-        app:layout_constraintTop_toTopOf="@+id/adminBusTicketPriceTitle" />
+        android:text="300000"
+        app:layout_constraintEnd_toEndOf="@+id/adminBusTypeVal"
+        app:layout_constraintTop_toTopOf="@+id/adminBusPriceTitle" />
+
+    <Button
+        android:id="@+id/adminBusDeleteItemBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="DELETE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.911"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
